--- a/css/top.css
+++ b/css/top.css
@@ -94,7 +94,7 @@ h1,h2,h3,h4,h5,h6,p,ul,li,dl,dt,dd,a,address{
 #header {
 	width: 100%;
 	background: #fff;
-	height: 298px;
+	height: 312px;
 	border-bottom: 2px solid #666;
 }
 
@@ -302,13 +302,8 @@ h1,h2,h3,h4,h5,h6,p,ul,li,dl,dt,dd,a,address{
 	position: relative;
 }
 
-/*-------------左側の設定　ここから------------*/
+/*-------------左側の設定　ここから　bootstrapのため削除------------*/
 
-#contents {
-	float: left;
-	width: 485px;
-	margin: 0 15px 0 0 ;
-}
 
 /*------------webサイト製作　ここから--------------*/
 
@@ -562,10 +557,8 @@ h1,h2,h3,h4,h5,h6,p,ul,li,dl,dt,dd,a,address{
 
 /*------------ブログの設定　ここから------------*/
 #side {
-	float: right;
 	width: 210px;
 	height: 300px;
-	background: url(../images/top_page/top_page_side_bg.png) no-repeat left top;
 }
 
 
@@ -749,3 +742,13 @@ h1,h2,h3,h4,h5,h6,p,ul,li,dl,dt,dd,a,address{
 	left: 380px;
 }
 
+
+
+/* メインエリアのテキスト設定 */
+.text_size {
+	font-size: 80%;
+}
+
+.col-sm-4 h3 img {
+	width: 100%;
+}
