--- a/css/main.css
+++ b/css/main.css
@@ -7,32 +7,52 @@
 	padding: 8px 15px;
 }
 
-/* header_areaの設定 */
-.header_area {
-	clear: both;
-	margin: 0 0 20px 0;
-}
-
-
 /* Accordionの設定 */
-#testPanel li {
-	list-style: none;
+header.carousel {
+	height: 64%;
 }
 
-#testPanel {
-	overflow:hidden;
-	width:1280px;
-	height:540px;
-	list-style-type:none;
+.slide {
+	margin: 51px 0 0 0;
 }
 
-#testPanel li a:hover img.looking{
-	opacity:0.6;
-	filter:alpha(opacity=60);
-	-ms-filter: "alpha( opacity=60 )";
-	background:none!important;
+/* footerの設定 */
+footer {
+	margin: 20px 0 0 0;
 }
 
-.slide_ul {
-	margin: 51px auto 0;
+/* sns iconの設定 */
+.footer_sns {
+	margin: 0 0 20px -5px;
+}
+
+.sns_link {
+	padding-left: 0;
+}
+
+/* footer navの設定 */
+.footer_area {
+	margin-left: -20px;
+}
+
+.footer_link li {
+	padding: 0 0 0 14px;
+}
+
+.footer_area {
+	padding-left: 12px;
+}
+
+.footer_link li a {
+	font-size: 1.3em;
+	color: #333;
+}
+
+.footer_link li i {
+	vertical-align: top;
+}
+
+/* copyrightの設定 */
+.right {
+	text-align: right;
 }
