--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ footer {
 }
 
 /* media queryの設定  Sサイズ*/
-@media only screen and (max-width: 480px) and (min-width: 767px) {
+@media only screen and (min-width: 480px) and (max-width: 767px) {
 	/* sns iconの設定 */
 	header.carousel {
 		height: 40%;
@@ -88,7 +88,7 @@ footer {
 }
 
 /* media queryの設定  XSサイズ*/
-@media only screen and (max-width: 480px) and (min-width: 767px) {
+@media only screen and (min-width: 479px) {
 	/* sns iconの設定 */
 	header.carousel {
 		height: 30%;
