--- a/css/main.css
+++ b/css/main.css
@@ -65,12 +65,12 @@ footer {
 @media only screen and (min-width: 980px) {
 	/* sns iconの設定 */
 	header.carousel {
-		height: 64%;
+		height: 70%;
 	}
 }
 
 /* media queryの設定  Mサイズ*/
-@media only screen and (min-width: 768px) and (min-width: 989px) {
+@media only screen and (min-width: 768px) and (max-width: 989px) {
 	/* sns iconの設定 */
 	header.carousel {
 		height: 50%;
