--- a/css/default.css
+++ b/css/default.css
@@ -15,7 +15,12 @@
 
 /* サイト制作の説明 */
 .web_site {
-	margin: 40px 0 10px 0;
-	font-size: 200%;
+	margin: 50px 0 10px 0;
+	font-size: 150%;
 	font-weight: bold;
+}
+
+/* site view btnの設定 */
+.site_view {
+	margin: 10px 0 0 0;
 }
