--- a/css/gallery.css
+++ b/css/gallery.css
@@ -14,11 +14,16 @@
 
 /*ーーーーItem page settingーーーー*/
 /*close button setting*/
+#glisse-overlay-content {
+	position: relative;
+}
+
+
 #glisse-close {
     background-color: #ccc;
     border: solid 1px #999;
     border-radius: 4px;
-    position: fixed;
+    position: absolute;
 	top:90px;
 	right: 120px;
 	height: 40px;
