--- a/css/gallery.css
+++ b/css/gallery.css
@@ -14,7 +14,7 @@
 
 /*ーーーーItem page settingーーーー*/
 /*close button setting*/
-#glisse-overlay-content {
+#glisse-wrapper {
 	position: relative;
 }
 
