--- a/css/gallery.css
+++ b/css/gallery.css
@@ -18,7 +18,7 @@
     background-color: #ccc;
     border: solid 1px #999;
     border-radius: 4px;
-    position: absolute;
+    position: fixed;
 	top:90px;
 	right: 120px;
 	height: 40px;
