--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,27 @@ footer {
 	padding-left: 0;
 }
 
-
+/* page topへ戻るボタンの設定 */
+#page-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    font-size: 77%;
+}
+#page-top a {
+    background: #666;
+    text-decoration: none;
+    color: #fff;
+    width: 100px;
+    padding: 10px 0;
+    text-align: center;
+    display: block;
+    border-radius: 5px;
+}
+#page-top a:hover {
+    text-decoration: none;
+    opacity: 0.5;
+}
 
 
 
