--- a/css/web.css
+++ b/css/web.css
@@ -60,17 +60,11 @@ CSS Document webページ stylesheet
 .Program li {
 	float: left;
 	width: 95px;
-	margin: 0 10px 10px 0;
+	margin: 0 10px 0 0;
 	padding: 3px 0 2px 0;
 	text-align: center;
 	background: #0081b8;
 	color: #fff;
-}
-
-
-/*アンカーリンク　オマタモータース*/
-#omata {
-	font-size: 80%;
 }
 
 
